--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,81 @@
+
 {
-  "name": "Numerix - Aprendizaje Divertido",
+  "name": "Numerix - Aprendizaje Divertido de Matemáticas",
   "short_name": "Numerix",
-  "description": "Lecciones interactivas de matemáticas para niños por Numerix",
+  "description": "Lecciones interactivas de matemáticas para niños por Numerix.",
+  "id": "/numerix-app/",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#FAF8F0",
   "theme_color": "#FFC857",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-any-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any",
+      "data_ai_hint": "app icon"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-any-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any",
+      "data_ai_hint": "app icon"
+    },
+    {
+      "src": "/icons/icon-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable",
+      "data_ai_hint": "app icon maskable"
+    },
+    {
+      "src": "/icons/icon-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable",
+      "data_ai_hint": "app icon maskable"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1-narrow.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Pantalla de inicio de Numerix en móvil",
+      "data_ai_hint": "app screenshot mobile"
+    },
+    {
+      "src": "/screenshots/screenshot1-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Pantalla de inicio de Numerix en escritorio",
+      "data_ai_hint": "app screenshot desktop"
+    },
+    {
+      "src": "/screenshots/screenshot2-narrow.png",
+      "sizes": "540x720",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Ejemplo de lección en Numerix en móvil",
+      "data_ai_hint": "lesson mobile"
+    },
+    {
+      "src": "/screenshots/screenshot2-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Ejemplo de lección en Numerix en escritorio",
+      "data_ai_hint": "lesson desktop"
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
