--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,81 +1,76 @@
-
 {
-  "name": "Numerix - Aprendizaje Divertido de Matemáticas",
+  "name": "Numerix - Aprendizaje Divertido",
   "short_name": "Numerix",
   "description": "Lecciones interactivas de matemáticas para niños por Numerix.",
   "id": "/numerix-app/",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "display_override": ["window-controls-overlay"],
   "background_color": "#FAF8F0",
   "theme_color": "#FFC857",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/icons/icon-any-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any",
-      "data_ai_hint": "app icon"
-    },
-    {
-      "src": "/icons/icon-any-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any",
-      "data_ai_hint": "app icon"
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-maskable-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable",
-      "data_ai_hint": "app icon maskable"
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/icon-any-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-maskable-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable",
-      "data_ai_hint": "app icon maskable"
+      "purpose": "maskable"
     }
   ],
   "screenshots": [
     {
-      "src": "/screenshots/screenshot1-narrow.png",
-      "sizes": "540x720",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Pantalla de inicio de Numerix en móvil",
-      "data_ai_hint": "app screenshot mobile"
-    },
-    {
-      "src": "/screenshots/screenshot1-wide.png",
+      "src": "/screenshots/screenshot1.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "form_factor": "wide",
-      "label": "Pantalla de inicio de Numerix en escritorio",
-      "data_ai_hint": "app screenshot desktop"
+      "description": "Pantalla de inicio de Numerix"
     },
     {
-      "src": "/screenshots/screenshot2-narrow.png",
-      "sizes": "540x720",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Ejemplo de lección en Numerix en móvil",
-      "data_ai_hint": "lesson mobile"
-    },
-    {
-      "src": "/screenshots/screenshot2-wide.png",
+      "src": "/screenshots/screenshot2.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "form_factor": "wide",
-      "label": "Ejemplo de lección en Numerix en escritorio",
-      "data_ai_hint": "lesson desktop"
+      "description": "Ejemplo de lección de Numerix"
     }
   ],
-  "related_applications": [],
-  "prefer_related_applications": false
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "file_handlers": [
+    {
+      "action": "/handle-file",
+      "accept": {
+        "text/plain": [".txt", ".numerix-lesson"],
+        "image/jpeg": [".jpg", ".jpeg"],
+        "image/png": [".png"]
+      },
+      "launch_type": "single-client"
+    }
+  ],
+  "handle_links": "auto",
+  "protocol_handlers": [
+    {
+      "protocol": "web+numerix",
+      "url": "/protocol-handler?data=%s"
+    }
+  ]
 }
